ignore中添加learn/data/hdf5

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !tests/test_data/sgf/*.sgf
 !tests/test_data/hdf5/*.h5
 !tests/test_data/hdf5/*.hdf5
+!learn/data/hdf5/*.hdf5
 src/
 benchmarks/data/
 /.idea
